<resources>
    <string name="app_name" translatable="false">JotJot</string>
    <string name="note_button">N o t e s</string>
    <string name="reminder_button">R e m i n d e r s</string>
    <string name="list_button">L i s t s</string>
    <string name="notes_title">Notes</string>
    <string name="reminders_title">Reminders</string>
    <string name="lists_title">Lists</string>
    <string name="copyright">© Jacob Goodridge</string>
    <string name="reminder_add">New Reminder</string>
    <string name="newRem_Title">Title</string>
    <string name="newRem_Date">Date</string>
    <string name="newRem_Time">Time</string>
    <string name="pick_date">Select Date</string>
    <string name="date_selected">Selected Date:</string>
    <string name="button_create">Create</string>
    <string name="pick_time">Select Time</string>
    <string name="time_selected">Selected Time:</string>
    <string name="credits">Credits</string>
    <string name="translators">Translators</string>
    <string name="japanese">Japanese</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="jacob_goodridge">Jacob Goodridge</string>
    <string name="brandon_szukalski">Brandon Szukalski</string>
    <string name="and">" and "</string>
    <string name="spanish_authors">Jacob Goodridge and Brandon Szukalski</string>
    <string name="CONTENTDESC_menuButton">Menu button</string>
    <string name="add_new_task_dialog_title">Add new item</string>
    <string name="save">Save</string>
    <string name="task_success">Added successfully</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update_task_dialog_title">Update</string>
    <string name="mark_as_done" translatable="false">Mark as done</string>
    <string name="incomplete" translatable="false">Not Completed</string>
    <string name="complete" translatable="false">Completed</string>
    <string name="task">List Item</string>
    <string name="deadline" translatable="false">NOTICE: STRING ERROR</string>
    <string name="task_delete">Item deleted</string>
    <string name="task_update">Item updated</string>
    <string name="back_three_times_plural">Press back button %1$s more times to exit.</string>
    <string name="back_three_times">Press back button %1$s more time to exit.</string>
    <string name="construction">This feature is currently being developed. It may not function as intended.</string>
    <string name="developed_by">Developed by Jacob Goodridge</string>
    <string name="variable" translatable="false">%1$s</string>
    <string name="note_add">New Note</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="note_delete">Note deleted</string>
    <string name="note_edit">Edit Note</string>
</resources>
