<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/mainNotesButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="128dp"
        android:background="@color/ButtonColor"
        android:elevation="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/note_button"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/mainRemindersButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mainRemindersButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@color/ButtonColor"
        android:elevation="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/reminder_button"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainListsButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="128dp"
        android:background="@color/ButtonColor"
        android:elevation="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/list_button"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainRemindersButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/optionButton"
        android:layout_width="41dp"
        android:layout_height="60dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/CONTENTDESC_menuButton"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more_vert_black_24dp" />

    <Button
        android:id="@+id/mainJotJotLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif-black"
        android:onClick="LogoPress"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>