<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListsActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/listsAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="#FFFFFF"
        app:srcCompat="@drawable/ic_add_white_24dp" />

    <TextView
        android:id="@+id/listsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/lists_title"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:clickable="true"
        android:longClickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listsTitle"
        android:focusable="true" />

    <ImageButton
        android:id="@+id/delete_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:background="@color/ButtonColor"
        android:contentDescription="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/listsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/listsTitle"
        app:layout_constraintVertical_bias="0.32999998"
        app:srcCompat="@drawable/ic_baseline_delete_24" />

    <ImageButton
        android:id="@+id/edit_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:background="@color/ButtonColor"
        android:contentDescription="@string/edit"
        app:layout_constraintBottom_toBottomOf="@+id/listsTitle"
        app:layout_constraintEnd_toStartOf="@+id/delete_item"
        app:layout_constraintTop_toTopOf="@+id/listsTitle"
        app:layout_constraintVertical_bias="0.312"
        app:srcCompat="@drawable/ic_baseline_edit_24" />


</androidx.constraintlayout.widget.ConstraintLayout>